--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -6,7 +6,7 @@
   &__logo {
 
     img {
-      width: 100%;
+      width: 8.875rem;
       height: auto;
     }
 
@@ -31,6 +31,10 @@
     a {
       font-size: $font-small;
       color: $darkBlue;
+
+      &:not(:last-child) {
+        margin-right: 2rem;
+      }
     }
   }
 
